Feat: 전체적인 레이아웃 작업

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,1 +1,13 @@
 @import "styles/color.module.scss";
+@import "styles/layout.module.scss";
+
+.main {
+  width: 100vw;
+  height: 100vh;
+  background-color: $background;
+  @include Center;
+}
+
+.todo {
+  width: 450px;
+}
