Feat: 투두 리스트 UI 추가

--- a/src/components/todo/header/todo-header.module.scss
+++ b/src/components/todo/header/todo-header.module.scss
@@ -27,13 +27,13 @@
 }
 
 .todo-header__month {
-  color: $gray;
+  color: $gray-10;
 }
 
 .todo-header-task-count {
   position: absolute;
   right: 0;
   top: 0;
-  color: $gray;
+  color: $gray-10;
   font-size: 14px;
 }
