--- a/src/styles/color.module.scss
+++ b/src/styles/color.module.scss
@@ -2,5 +2,6 @@ $white: white;
 $background: #f0f0e8;
 $main: #7b76a6;
 $black: #222;
-$gray: #d6d5d7;
+$gray-10: #d6d5d7;
+$gray-20: #767676;
 $border: #dedede;
