--- a/src/styles/layout.module.scss
+++ b/src/styles/layout.module.scss
@@ -8,3 +8,9 @@
   display: flex;
   flex-direction: column;
 }
+
+@mixin Between {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
