--- a/src/components/modal-compound/modal.module.scss
+++ b/src/components/modal-compound/modal.module.scss
@@ -3,16 +3,39 @@
 
 .modal {
   width: 400px;
-  padding: 24px;
-  background-color: $white;
-  border-radius: 6px;
+  display: flex;
+  justify-content: center;
 }
 
 .backdrop {
   width: 100%;
-  height: 100vh;
-  position: fixed;
+  height: 100%;
+  position: absolute;
   top: 0;
   left: 0;
   background-color: $backdrop;
+}
+
+.container {
+  position: relative;
+  width: 90%;
+  z-index: 10;
+  padding: 24px;
+  background-color: $white;
+  border-radius: 6px;
+  transform: translateY(-50%);
+}
+
+.title {
+  font-size: 20px;
+  font-weight: 400;
+  margin-bottom: 16px;
+}
+
+.input {
+  width: 100%;
+  height: 44px;
+  border: 1px solid $border;
+  border-radius: 4px;
+  padding: 0 10px;
 }
